--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/foreign_key_child_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/foreign_key_child_update.yaml
@@ -34,11 +34,11 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects;
         loadRules:
             - table: projects
-              rows: 100
+              rows: 10000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100]
+                    params: [1, 10000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -53,11 +53,11 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: employees_without_fk
-              rows: 1000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 1000]
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -75,14 +75,14 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_id
                     util: RandomInt
-                    params: [1,100]
+                    params: [1,10000]
               
             - table: employees_with_fk
-              rows: 1000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 1000]
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -100,7 +100,7 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_id
                     util: RandomInt
-                    params: [1,100]
+                    params: [1,10000]
 
         afterLoad:
             - ALTER TABLE employees_with_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects(id);
@@ -114,7 +114,7 @@ microbenchmark:
                         - query: SELECT * FROM employees_with_fk where project_id=?;
                           bindings:
                               util: RandomNumber
-                              params: [1, 100]
+                              params: [1, 10000]
                               
             - workload: insert_with_fk
               run:
@@ -124,7 +124,7 @@ microbenchmark:
                         - query: insert into employees_with_fk values(?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
-                                params: [1001, 91000]
+                                params: [100001, 910000]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
@@ -136,7 +136,7 @@ microbenchmark:
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
                               - util: RandomNumber
-                                params: [1,100]
+                                params: [1,10000]
 
             - workload: update_with_fk
               run:
@@ -145,10 +145,10 @@ microbenchmark:
                     queries:
                         - query: update employees_with_fk set project_id=? where id=?;
                           bindings:
-                            - util: PrimaryIntGen
-                              params: [1001, 90000]
                             - util: RandomInt
-                              params: [1, 1000]
+                              params: [1, 10000]
+                            - util: RandomInt
+                              params: [1, 100000]
 
             - workload: select_without_fk
               run:
@@ -158,7 +158,7 @@ microbenchmark:
                         - query: SELECT * FROM employees_without_fk where project_id=?;
                           bindings:
                               util: RandomNumber
-                              params: [1, 100]
+                              params: [1, 10000]
 
             - workload: insert_without_fk
               run:
@@ -168,19 +168,19 @@ microbenchmark:
                         - query: insert into employees_without_fk values(?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
-                                params: [1001, 90000]
+                                params: [100001, 900000]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
                                 params: [1, 100]
-                              - util: RandomAString
+                              - util: RandomNstring
                                 params: [10, 15]
                               - util: RandomAString
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
                               - util: RandomInt
-                                params: [1,100]
+                                params: [1,10000]
             - workload: update_without_fk
               run:
                   - name: update_without_fk
@@ -188,7 +188,7 @@ microbenchmark:
                     queries:
                         - query: update employees_without_fk set project_id=? where id=?;
                           bindings:
-                            - util: PrimaryIntGen
-                              params: [1001, 90000]
                             - util: RandomInt
-                              params: [1, 1000]
+                              params: [1, 10000]
+                            - util: RandomInt
+                              params: [1, 100000]
