--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/multi_fk_ref_multi_parent_child_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/multi_fk_ref_multi_parent_child_update.yaml
@@ -29,9 +29,9 @@ microbenchmark:
             - create table projects(id int primary key, uid int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
             - create table employees(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, dept_id int not null);
         cleanup:
-            - DROP TABLE IF EXISTS employees_with_1_fk;
             - DROP TABLE IF EXISTS employees;
             - DROP TABLE IF EXISTS projects;
+            - DROP TABLE IF EXISTS dept;
         loadRules:
             - table: projects
               rows: 10000
