--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/multi_fk_ref_multi_parent_child_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/multi_fk_ref_multi_parent_child_update.yaml
@@ -22,14 +22,17 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
-            - DROP TABLE IF EXISTS employees;
+            - DROP TABLE IF EXISTS employees_with_fk;
+            - DROP TABLE IF EXISTS employees_without_fk;
             - DROP TABLE IF EXISTS projects;
             - DROP TABLE IF EXISTS dept;
             - create table dept(id int primary key, name varchar(20) not null);
             - create table projects(id int primary key, uid int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
-            - create table employees(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, dept_id int not null);
+            - create table employees_with_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, dept_id int not null);
+            - create table employees_without_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, dept_id int not null);
         cleanup:
-            - DROP TABLE IF EXISTS employees;
+            - DROP TABLE IF EXISTS employees_with_fk;
+            - DROP TABLE IF EXISTS employees_without_fk;
             - DROP TABLE IF EXISTS projects;
             - DROP TABLE IF EXISTS dept;
         loadRules:
@@ -55,7 +58,35 @@ microbenchmark:
                     util: RandomNoWithDecimalPoints
                     params: [1, 1000000, 2]
 
-            - table: employees
+            - table: employees_with_fk
+              rows: 100000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: email
+                    util: RandomAString
+                    params: [1, 100]
+                  - name: phone
+                    util: RandomNstring
+                    params: [10, 15]
+                  - name: position
+                    util: RandomAString
+                    params: [1, 10]
+                  - name: salary
+                    util: RandomNoWithDecimalPoints
+                    params: [1, 1000000, 2]
+                  - name: project_id
+                    util: RandomInt
+                    params: [1,10000]
+                  - name: dept_id
+                    util: RandomInt
+                    params: [1,10000]
+            
+            - table: employees_without_fk
               rows: 100000
               columns:
                   - name: id
@@ -94,27 +125,27 @@ microbenchmark:
                     params: [1, 20]
 
         afterLoad:
-            - ALTER TABLE employees add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects(id);
-            - ALTER TABLE employees add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept(id);
+            - ALTER TABLE employees_with_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects(id);
+            - ALTER TABLE employees_with_fk add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept(id);
             
         executeRules:
-            - workload: select
+            - workload: select_with_fk
               run:
-                  - name: select
+                  - name: select_with_fk
                     weight: 100
                     queries:
-                        - query: SELECT * FROM employees where project_id=? or dept_id=?;
+                        - query: SELECT * FROM employees_with_fk where project_id=? or dept_id=?;
                           bindings:
                             - count: 2
                               util: RandomNumber
                               params: [1, 10000]
 
-            - workload: insert
+            - workload: insert_with_fk
               run:
-                  - name: insert
+                  - name: insert_with_fk
                     weight: 100
                     queries:
-                        - query: insert into employees values(?,?,?,?,?,?,?,?);
+                        - query: insert into employees_with_fk values(?,?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
                                 params: [100001, 900000]
@@ -132,12 +163,60 @@ microbenchmark:
                                 params: [1,10000]
                               - util: RandomInt
                                 params: [1,10000]
-            - workload: update
+            - workload: update_with_fk
               run:
-                  - name: update
+                  - name: update_with_fk
                     weight: 100
                     queries:
-                        - query: update employees set project_id=? and dept_id=? where id=?;
+                        - query: update employees_with_fk set project_id=?, dept_id=? where id=?;
+                          bindings:
+                            - util: RandomInt
+                              params: [1, 10000]
+                            - util: RandomInt
+                              params: [1, 10000]
+                            - util: PrimaryIntGen
+                              params: [1, 900000]
+
+            - workload: select_without_fk
+              run:
+                  - name: select_without_fk
+                    weight: 100
+                    queries:
+                        - query: SELECT * FROM employees_without_fk where project_id=? or dept_id=?;
+                          bindings:
+                            - count: 2
+                              util: RandomNumber
+                              params: [1, 10000]
+
+            - workload: insert_without_fk
+              run:
+                  - name: insert_without_fk
+                    weight: 100
+                    queries:
+                        - query: insert into employees_without_fk values(?,?,?,?,?,?,?,?);
+                          bindings:
+                              - util: PrimaryIntGen
+                                params: [100001, 900000]
+                              - util: RandomAString
+                                params: [1, 20]
+                              - util: RandomAString
+                                params: [1, 100]
+                              - util: RandomNstring
+                                params: [10, 15]
+                              - util: RandomAString
+                                params: [1, 10]
+                              - util: RandomNoWithDecimalPoints
+                                params: [1, 1000000, 2]
+                              - util: RandomInt
+                                params: [1,10000]
+                              - util: RandomInt
+                                params: [1,10000]
+            - workload: update_without_fk
+              run:
+                  - name: update_without_fk
+                    weight: 100
+                    queries:
+                        - query: update employees_without_fk set project_id=?, dept_id=? where id=?;
                           bindings:
                             - util: RandomInt
                               params: [1, 10000]
