--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/multi_fk_ref_multi_child_parent_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/multi_fk_ref_multi_child_parent_update.yaml
@@ -22,51 +22,22 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
-            - DROP TABLE IF EXISTS employees_with_indx;
-            - DROP TABLE IF EXISTS projects_with_indx;
-            - DROP TABLE IF EXISTS dept_with_indx;
-            - DROP TABLE IF EXISTS employees_without_indx;
-            - DROP TABLE IF EXISTS projects_without_indx;
-            - DROP TABLE IF EXISTS dept_without_indx;
+            - DROP TABLE IF EXISTS employees_with_fk;
+            - DROP TABLE IF EXISTS projects_with_fk;
+            - DROP TABLE IF EXISTS dept_with_ref;
+            - DROP TABLE IF EXISTS dept_without_ref;
 
-            - create table dept_without_indx(id int primary key, uid int unique, name varchar(20) not null);
-            - create table dept_with_indx(id int primary key, uid int unique, name varchar(20) not null);
-            - create table projects_with_indx(id int primary key, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), dept_id int not null);
-            - create table employees_with_indx(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), dept_id int not null);
-            - create table projects_without_indx(id int primary key, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), dept_id int not null);
-            - create table employees_without_indx(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), dept_id int not null);
-            - create index dept_index on dept_with_indx(uid);
+            - create table dept_without_ref(id int primary key, uid int unique, name varchar(20) not null);
+            - create table dept_with_ref(id int primary key, uid int unique, name varchar(20) not null);
+            - create table projects_with_fk(id int primary key, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), dept_id int not null);
+            - create table employees_with_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), dept_id int not null);
         cleanup:
-            - DROP TABLE IF EXISTS employees_with_indx;
-            - DROP TABLE IF EXISTS projects_with_indx;
-            - DROP TABLE IF EXISTS dept_with_indx;
-            - DROP TABLE IF EXISTS employees_without_indx;
-            - DROP TABLE IF EXISTS projects_without_indx;
-            - DROP TABLE IF EXISTS dept_without_indx;
+            - DROP TABLE IF EXISTS employees_with_fk;
+            - DROP TABLE IF EXISTS projects_with_fk;
+            - DROP TABLE IF EXISTS dept_with_ref;
+            - DROP TABLE IF EXISTS dept_without_ref;
         loadRules:
-            - table: projects_with_indx
-              rows: 100000
-              columns:
-                  - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: name
-                    util: RandomAString
-                    params: [1, 20]
-                  - name: start_date
-                    util: RandomDateBtwYears
-                    params: [2000, 2025]
-                  - name: end_date
-                    util: RandomDateBtwYears
-                    params: [2000, 2025]
-                  - name: budget
-                    util: RandomNoWithDecimalPoints
-                    params: [1, 1000000, 2]
-                  - name: dept_id
-                    util: RandomInt
-                    params: [1, 10000]
-            
-            - table: projects_without_indx
+            - table: projects_with_fk
               rows: 100000
               columns:
                   - name: id
@@ -88,7 +59,7 @@ microbenchmark:
                     util: RandomInt
                     params: [1, 10000]
 
-            - table: dept_with_indx
+            - table: dept_with_ref
               rows: 10000
               columns:
                   - name: id
@@ -101,7 +72,7 @@ microbenchmark:
                     util: RandomAString
                     params: [1, 20]
 
-            - table: dept_without_indx
+            - table: dept_without_ref
               rows: 10000
               columns:
                   - name: id
@@ -114,32 +85,7 @@ microbenchmark:
                     util: RandomAString
                     params: [1, 20]
               
-            - table: employees_with_indx
-              rows: 100000
-              columns:
-                  - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: name
-                    util: RandomAString
-                    params: [1, 20]
-                  - name: email
-                    util: RandomAString
-                    params: [1, 100]
-                  - name: phone
-                    util: RandomNstring
-                    params: [10, 15]
-                  - name: position
-                    util: RandomAString
-                    params: [1, 10]
-                  - name: salary
-                    util: RandomNoWithDecimalPoints
-                    params: [1, 1000000, 2]
-                  - name: dept_id
-                    util: RandomInt
-                    params: [1, 10000]
-
-            - table: employees_without_indx
+            - table: employees_with_fk
               rows: 100000
               columns:
                   - name: id
@@ -165,28 +111,26 @@ microbenchmark:
                     params: [1, 10000]
 
         afterLoad:
-            - ALTER TABLE projects_with_indx add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept_with_indx(uid) on delete cascade on update cascade;
-            - ALTER TABLE employees_with_indx add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept_with_indx(uid) on delete cascade on update cascade;
-            - ALTER TABLE projects_without_indx add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept_without_indx(uid) on delete cascade on update cascade;
-            - ALTER TABLE employees_without_indx add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept_without_indx(uid) on delete cascade on update cascade;
+            - ALTER TABLE projects_with_fk add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept_with_ref(uid) on delete cascade on update cascade;
+            - ALTER TABLE employees_with_fk add CONSTRAINT fk_dept FOREIGN KEY (dept_id) REFERENCES dept_with_ref(uid) on delete cascade on update cascade;
             
         executeRules:
-            - workload: select_with_indx
+            - workload: select_with_ref
               run:
-                  - name: select_with_indx
+                  - name: select_with_ref
                     weight: 100
                     queries:
-                        - query: SELECT * FROM dept_with_indx where uid=?;
+                        - query: SELECT * FROM dept_with_ref where uid=?;
                           bindings:
                               util: RandomNumber
                               params: [1, 10000]
 
-            - workload: insert_with_indx
+            - workload: insert_with_ref
               run:
-                  - name: insert_with_indx
+                  - name: insert_with_ref
                     weight: 100
                     queries:
-                        - query: insert into dept_with_indx values(?,?,?);
+                        - query: insert into dept_with_ref values(?,?,?);
                           bindings:
                               - count: 2
                                 util: PrimaryIntGen
@@ -194,44 +138,44 @@ microbenchmark:
                               - util: RandomAString
                                 params: [1, 20]
 
-            - workload: update_with_indx
+            - workload: update_with_ref
               run:
-                  - name: update_with_indx
+                  - name: update_with_ref
                     weight: 100
                     queries:
-                        - query: update dept_with_indx set uid=? where id=?;
+                        - query: update dept_with_ref set uid=? where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: delete_with_indx
+            - workload: delete_with_ref
               run:
-                  - name: delete_with_indx
+                  - name: delete_with_ref
                     weight: 100
                     queries:
-                        - query: delete from dept_with_indx where uid=?
+                        - query: delete from dept_with_ref where uid=?
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
             
-            - workload: select_without_indx
+            - workload: select_without_ref
               run:
-                  - name: select_without_indx
+                  - name: select_without_ref
                     weight: 100
                     queries:
-                        - query: SELECT * FROM dept_without_indx where uid=?;
+                        - query: SELECT * FROM dept_without_ref where uid=?;
                           bindings:
                               util: RandomNumber
                               params: [1, 10000]
 
-            - workload: insert_without_indx
+            - workload: insert_without_ref
               run:
-                  - name: insert_without_indx
+                  - name: insert_without_ref
                     weight: 100
                     queries:
-                        - query: insert into dept_without_indx values(?,?,?);
+                        - query: insert into dept_without_ref values(?,?,?);
                           bindings:
                               - count: 2
                                 util: PrimaryIntGen
@@ -239,24 +183,24 @@ microbenchmark:
                               - util: RandomAString
                                 params: [1, 20]
 
-            - workload: update_without_indx
+            - workload: update_without_ref
               run:
-                  - name: update_without_indx
+                  - name: update_without_ref
                     weight: 100
                     queries:
-                        - query: update dept_without_indx set uid=? where id=?;
+                        - query: update dept_without_ref set uid=? where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: delete_without_indx
+            - workload: delete_without_ref
               run:
-                  - name: delete_without_indx
+                  - name: delete_without_ref
                     weight: 100
                     queries:
-                        - query: delete from dept_without_indx where uid=?
+                        - query: delete from dept_without_ref where uid=?
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
