--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_parent_update_single_ref_indx.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_parent_update_single_ref_indx.yaml
@@ -28,6 +28,7 @@ microbenchmark:
             - create table projects_with_ref(id int primary key, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
             - create table projects_without_ref(id int primary key, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
             - create table employees_with_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null);
+            - create index parent_uid_indx on projects_with_ref(uid);
         cleanup:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS projects_with_ref;
