--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_range_multi_child_parent_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_range_multi_child_parent_update.yaml
@@ -27,10 +27,10 @@ microbenchmark:
             - DROP TABLE IF EXISTS dept_with_ref;
             - DROP TABLE IF EXISTS dept_without_ref;
 
-            - create table dept_without_ref(id int , uid int unique, name varchar(20) not null, primary key(id));
-            - create table dept_with_ref(id int , uid int unique, name varchar(20) not null, primary key(id));
-            - create table projects_with_fk(id int , name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), dept_id int not null, primary key(id));
-            - create table employees_with_fk(id int ,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), dept_id int not null, primary key(id));
+            - create table dept_without_ref(id int , uid int unique, name varchar(20) not null, primary key(id ASC));
+            - create table dept_with_ref(id int , uid int unique, name varchar(20) not null, primary key(id ASC));
+            - create table projects_with_fk(id int , name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), dept_id int not null, primary key(id ASC));
+            - create table employees_with_fk(id int ,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), dept_id int not null, primary key(id ASC));
         cleanup:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS projects_with_fk;
