--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_range_parent_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_range_parent_update.yaml
@@ -25,9 +25,9 @@ microbenchmark:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS projects_with_ref;
             - DROP TABLE IF EXISTS projects_without_ref;
-            - create table projects_with_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id));
-            - create table projects_without_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id));
-            - create table employees_with_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id));
+            - create table projects_with_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id ASC));
+            - create table projects_without_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id ASC));
+            - create table employees_with_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id ASC));
         cleanup:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS projects_with_ref;
